<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_329dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_278dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_230dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_43dp"
            android:paddingRight="@dimen/dimen_31dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@mipmap/account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/account_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/divider"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_23dp"
                android:layout_marginBottom="@dimen/dimen_23dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_25dp"
                    android:src="@mipmap/pwd" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/pwd_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/divider"
                    android:textSize="@dimen/size_18sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/dimen_18dp"
                android:layout_marginRight="@dimen/dimen_18dp">
            <TextView
                    android:id="@+id/link_phone_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="20dp"
                    android:text="手机登录"/>
            <TextView
                    android:id="@+id/link_retrieve_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="190dp"
                    android:text="忘记密码？"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_marginLeft="@dimen/dimen_18dp"
            android:layout_marginTop="@dimen/dimen_55dp"
            android:layout_marginRight="@dimen/dimen_18dp"
            android:background="@drawable/shape_big_login_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/size_24sp" />
    </LinearLayout>
</RelativeLayout>